--- a/index.html
+++ b/index.html
@@ -102,154 +102,159 @@
             <label class="radio-button"><input type="radio" name="mode" value="disaster" id="disaster"> Disaster</label>
             <div class="mcq-container" id="mcq-section">
                 <h2>Questions</h2>
-                <p>1. What is 2 + 2?</p>
-                <label><input type="radio" name="q1" value="A"> A. 4</label>
-                <label><input type="radio" name="q1" value="B"> B. 3</label>
-                <label><input type="radio" name="q1" value="C"> C. 5</label>
-                <label><input type="radio" name="q1" value="D"> D. 6</label>
+                
+<p>1. 2 + 2 কত?</p>
+<label><input type="radio" name="q1" value="A"> A. 4</label>
+<label><input type="radio" name="q1" value="B"> B. 3</label>
+<label><input type="radio" name="q1" value="C"> C. 5</label>
+<label><input type="radio" name="q1" value="D"> D. 6</label>
 
-                <p>2. What is the capital of France?</p>
-                <label><input type="radio" name="q2" value="A"> A. Paris</label>
-                <label><input type="radio" name="q2" value="B"> B. Rome</label>
-                <label><input type="radio" name="q2" value="C"> C. London</label>
-                <label><input type="radio" name="q2" value="D"> D. Berlin</label>
+<p>2. ফ্রান্সের রাজধানী কী?</p>
+<label><input type="radio" name="q2" value="A"> A. প্যারিস</label>
+<label><input type="radio" name="q2" value="B"> B. রোম</label>
+<label><input type="radio" name="q2" value="C"> C. লন্ডন</label>
+<label><input type="radio" name="q2" value="D"> D. বার্লিন</label>
 
-                <p>3. What is H2O?</p>
-                <label><input type="radio" name="q3" value="A"> A. Water</label>
-                <label><input type="radio" name="q3" value="B"> B. Oxygen</label>
-                <label><input type="radio" name="q3" value="C"> C. Hydrogen</label>
-                <label><input type="radio" name="q3" value="D"> D. Helium</label> 
-                <p>4. What is the chemical symbol for water?</p>
-<label><input type="radio" name="q4" value="A"> A. H2O</label>
-<label><input type="radio" name="q4" value="B"> B. CO2</label>
-<label><input type="radio" name="q4" value="C"> C. O2</label>
-<label><input type="radio" name="q4" value="D"> D. NaCl</label>
+<p>3. H2O কী?</p>
+<label><input type="radio" name="q3" value="A"> A. পানি</label>
+<label><input type="radio" name="q3" value="B"> B. অক্সিজেন</label>
+<label><input type="radio" name="q3" value="C"> C. হাইড্রোজেন</label>
+<label><input type="radio" name="q3" value="D"> D. হিলিয়াম</label>
 
-<p>5. What is the atomic number of carbon?</p>
-<label><input type="radio" name="q5" value="A"> A. 6</label>
-<label><input type="radio" name="q5" value="B"> B. 8</label>
-<label><input type="radio" name="q5" value="C"> C. 12</label>
-<label><input type="radio" name="q5" value="D"> D. 16</label>
+<p>4. পানি কোথায় পাওয়া যায়?</p>
+<label><input type="radio" name="q4" value="A"> A. নদী</label>
+<label><input type="radio" name="q4" value="B"> B. বায়ু</label>
+<label><input type="radio" name="q4" value="C"> C. মাটি</label>
+<label><input type="radio" name="q4" value="D"> D. সূর্য</label>
 
-<p>6. What is the main gas in Earth's atmosphere?</p>
-<label><input type="radio" name="q6" value="A"> A. Nitrogen</label>
-<label><input type="radio" name="q6" value="B"> B. Oxygen</label>
-<label><input type="radio" name="q6" value="C"> C. Carbon Dioxide</label>
-<label><input type="radio" name="q6" value="D"> D. Hydrogen</label>
+<p>5. অক্সিজেনের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q5" value="A"> A. O</label>
+<label><input type="radio" name="q5" value="B"> B. O2</label>
+<label><input type="radio" name="q5" value="C"> C. O3</label>
+<label><input type="radio" name="q5" value="D"> D. H2O</label>
 
-<p>7. What is the chemical formula for methane?</p>
-<label><input type="radio" name="q7" value="A"> A. CH4</label>
-<label><input type="radio" name="q7" value="B"> B. CO2</label>
-<label><input type="radio" name="q7" value="C"> C. O2</label>
-<label><input type="radio" name="q7" value="D"> D. H2O</label>
+<p>6. হাইড্রোজেনের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q6" value="A"> A. H</label>
+<label><input type="radio" name="q6" value="B"> B. He</label>
+<label><input type="radio" name="q6" value="C"> C. N</label>
+<label><input type="radio" name="q6" value="D"> D. O</label>
 
-<p>8. What element has the symbol 'Na'?</p>
-<label><input type="radio" name="q8" value="A"> A. Sodium</label>
-<label><input type="radio" name="q8" value="B"> B. Nitrogen</label>
-<label><input type="radio" name="q8" value="C"> C. Neon</label>
-<label><input type="radio" name="q8" value="D"> D. Nickel</label>
+<p>7. সোডিয়াম ক্লোরাইড কী?</p>
+<label><input type="radio" name="q7" value="A"> A. লবণ</label>
+<label><input type="radio" name="q7" value="B"> B. পানি</label>
+<label><input type="radio" name="q7" value="C"> C. চিনি</label>
+<label><input type="radio" name="q7" value="D"> D. মোম</label>
 
-<p>9. What is the boiling point of water?</p>
-<label><input type="radio" name="q9" value="A"> A. 0°C</label>
-<label><input type="radio" name="q9" value="B"> B. 50°C</label>
-<label><input type="radio" name="q9" value="C"> C. 100°C</label>
-<label><input type="radio" name="q9" value="D"> D. 200°C</label>
+<p>8. বায়ুর প্রধান উপাদান কী?</p>
+<label><input type="radio" name="q8" value="A"> A. নাইট্রোজেন</label>
+<label><input type="radio" name="q8" value="B"> B. অক্সিজেন</label>
+<label><input type="radio" name="q8" value="C"> C. হাইড্রোজেন</label>
+<label><input type="radio" name="q8" value="D"> D. মিথেন</label>
 
-<p>10. What is the chemical formula for sodium chloride?</p>
-<label><input type="radio" name="q10" value="A"> A. NaCl</label>
-<label><input type="radio" name="q10" value="B"> B. Na2O</label>
-<label><input type="radio" name="q10" value="C"> C. NaOH</label>
-<label><input type="radio" name="q10" value="D"> D. Cl2</label>
+<p>9. মিথেনের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q9" value="A"> A. CH4</label>
+<label><input type="radio" name="q9" value="B"> B. CO2</label>
+<label><input type="radio" name="q9" value="C"> C. O2</label>
+<label><input type="radio" name="q9" value="D"> D. H2O</label>
 
-<p>11. What is the pH of pure water?</p>
-<label><input type="radio" name="q11" value="A"> A. 7</label>
-<label><input type="radio" name="q11" value="B"> B. 0</label>
-<label><input type="radio" name="q11" value="C"> C. 14</label>
-<label><input type="radio" name="q11" value="D"> D. 10</label>
+<p>10. ক্যালসিয়ামের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q10" value="A"> A. Ca</label>
+<label><input type="radio" name="q10" value="B"> B. C</label>
+<label><input type="radio" name="q10" value="C"> C. Cl</label>
+<label><input type="radio" name="q10" value="D"> D. Cu</label>
 
-<p>12. What is the atomic symbol for gold?</p>
-<label><input type="radio" name="q12" value="A"> A. Au</label>
-<label><input type="radio" name="q12" value="B"> B. Ag</label>
-<label><input type="radio" name="q12" value="C"> C. Pb</label>
-<label><input type="radio" name="q12" value="D"> D. Fe</label>
+<p>11. কার্বন ডাইঅক্সাইডের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q11" value="A"> A. CO2</label>
+<label><input type="radio" name="q11" value="B"> B. C2H6</label>
+<label><input type="radio" name="q11" value="C"> C. CH4</label>
+<label><input type="radio" name="q11" value="D"> D. H2O</label>
 
-<p>13. What element is represented by the symbol 'O'?</p>
-<label><input type="radio" name="q13" value="A"> A. Oxygen</label>
-<label><input type="radio" name="q13" value="B"> B. Osmium</label>
-<label><input type="radio" name="q13" value="C"> C. Oganesson</label>
-<label><input type="radio" name="q13" value="D"> D. Opium</label>
+<p>12. জল কেমন ধরনের যৌগ?</p>
+<label><input type="radio" name="q12" value="A"> A. যৌগ</label>
+<label><input type="radio" name="q12" value="B"> B. মৌল</label>
+<label><input type="radio" name="q12" value="C"> C. এসিড</label>
+<label><input type="radio" name="q12" value="D"> D. বেস</label>
 
-<p>14. What is the chemical symbol for hydrogen?</p>
-<label><input type="radio" name="q14" value="A"> A. H</label>
-<label><input type="radio" name="q14" value="B"> B. He</label>
-<label><input type="radio" name="q14" value="C"> C. O</label>
-<label><input type="radio" name="q14" value="D"> D. N</label>
+<p>13. সোনা কোন মৌল?</p>
+<label><input type="radio" name="q13" value="A"> A. Au</label>
+<label><input type="radio" name="q13" value="B"> B. Ag</label>
+<label><input type="radio" name="q13" value="C"> C. Cu</label>
+<label><input type="radio" name="q13" value="D"> D. Fe</label>
 
-<p>15. What is the chemical formula for carbon dioxide?</p>
-<label><input type="radio" name="q15" value="A"> A. CO2</label>
-<label><input type="radio" name="q15" value="B"> B. C2H6</label>
-<label><input type="radio" name="q15" value="C"> C. CH4</label>
-<label><input type="radio" name="q15" value="D"> D. H2O</label>
+<p>14. তামার রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q14" value="A"> A. Cu</label>
+<label><input type="radio" name="q14" value="B"> B. Ag</label>
+<label><input type="radio" name="q14" value="C"> C. Al</label>
+<label><input type="radio" name="q14" value="D"> D. Pb</label>
 
-<p>16. Which of these elements is a noble gas?</p>
-<label><input type="radio" name="q16" value="A"> A. Argon</label>
-<label><input type="radio" name="q16" value="B"> B. Oxygen</label>
-<label><input type="radio" name="q16" value="C"> C. Nitrogen</label>
-<label><input type="radio" name="q16" value="D"> D. Carbon</label>
+<p>15. নাইট্রোজেনের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q15" value="A"> A. N</label>
+<label><input type="radio" name="q15" value="B"> B. O</label>
+<label><input type="radio" name="q15" value="C"> C. Na</label>
+<label><input type="radio" name="q15" value="D"> D. K</label>
 
-<p>17. What is the atomic number of hydrogen?</p>
-<label><input type="radio" name="q17" value="A"> A. 1</label>
-<label><input type="radio" name="q17" value="B"> B. 2</label>
-<label><input type="radio" name="q17" value="C"> C. 3</label>
-<label><input type="radio" name="q17" value="D"> D. 4</label>
+<p>16. সাদা রক্তকণিকার কাজ কী?</p>
+<label><input type="radio" name="q16" value="A"> A. রোগ প্রতিরোধ</label>
+<label><input type="radio" name="q16" value="B"> B. অক্সিজেন পরিবহন</label>
+<label><input type="radio" name="q16" value="C"> C. খাদ্য হজম</label>
+<label><input type="radio" name="q16" value="D"> D. শরীরের তাপমাত্রা নিয়ন্ত্রণ</label>
 
-<p>18. What is the chemical formula for ammonia?</p>
-<label><input type="radio" name="q18" value="A"> A. NH3</label>
-<label><input type="radio" name="q18" value="B"> B. H2O</label>
-<label><input type="radio" name="q18" value="C"> C. CO2</label>
-<label><input type="radio" name="q18" value="D"> D. O2</label>
+<p>17. কি উপাদান থেকে বাষ্প তৈরি হয়?</p>
+<label><input type="radio" name="q17" value="A"> A. পানি</label>
+<label><input type="radio" name="q17" value="B"> B. লবণ</label>
+<label><input type="radio" name="q17" value="C"> C. তেল</label>
+<label><input type="radio" name="q17" value="D"> D. চিনি</label>
 
-<p>19. What gas do plants absorb during photosynthesis?</p>
-<label><input type="radio" name="q19" value="A"> A. Carbon dioxide</label>
-<label><input type="radio" name="q19" value="B"> B. Oxygen</label>
-<label><input type="radio" name="q19" value="C"> C. Nitrogen</label>
-<label><input type="radio" name="q19" value="D"> D. Methane</label>
+<p>18. তরল নাইট্রোজেন কি?</p>
+<label><input type="radio" name="q18" value="A"> A. একটি গ্যাস</label>
+<label><input type="radio" name="q18" value="B"> B. একটি তরল</label>
+<label><input type="radio" name="q18" value="C"> C. একটি কঠিন</label>
+<label><input type="radio" name="q18" value="D"> D. একটি আয়নিত গ্যাস</label>
 
-<p>20. What is the atomic number of oxygen?</p>
-<label><input type="radio" name="q20" value="A"> A. 8</label>
-<label><input type="radio" name="q20" value="B"> B. 6</label>
-<label><input type="radio" name="q20" value="C"> C. 10</label>
-<label><input type="radio" name="q20" value="D"> D. 14</label>
+<p>19. এসিড ও বেস কিভাবে পরিচিত?</p>
+<label><input type="radio" name="q19" value="A"> A. হালকা ও গা dark ়</label>
+<label><input type="radio" name="q19" value="B"> B. তরল ও গ্যাস</label>
+<label><input type="radio" name="q19" value="C"> C. স্বাদে মিষ্টি</label>
+<label><input type="radio" name="q19" value="D"> D. pH মান দ্বারা</label>
 
-<p>21. What is the molecular weight of water (H2O)?</p>
-<label><input type="radio" name="q21" value="A"> A. 18 g/mol</label>
-<label><input type="radio" name="q21" value="B"> B. 16 g/mol</label>
-<label><input type="radio" name="q21" value="C"> C. 20 g/mol</label>
-<label><input type="radio" name="q21" value="D"> D. 22 g/mol</label>
+<p>20. লবণ কীভাবে তৈরি হয়?</p>
+<label><input type="radio" name="q20" value="A"> A. এসিড ও বেসের প্রতিক্রিয়া</label>
+<label><input type="radio" name="q20" value="B"> B. দুটি মৌলের মধ্যে একত্রিত</label>
+<label><input type="radio" name="q20" value="C"> C. জল গরম করেই</label>
+<label><input type="radio" name="q20" value="D"> D. অক্সিজেনের সাথে বিক্রিয়া</label>
 
-<p>22. What is the chemical formula for sulfuric acid?</p>
-<label><input type="radio" name="q22" value="A"> A. H2SO4</label>
-<label><input type="radio" name="q22" value="B"> B. HCl</label>
-<label><input type="radio" name="q22" value="C"> C. NaOH</label>
-<label><input type="radio" name="q22" value="D"> D. CO2</label>
+<p>21. সিলিকনের রাসায়নিক সংকেত কী?</p>
+<label><input type="radio" name="q21" value="A"> A. Si</label>
+<label><input type="radio" name="q21" value="B"> B. S</label>
+<label><input type="radio" name="q21" value="C"> C. Se</label>
+<label><input type="radio" name="q21" value="D"> D. Sc</label>
 
-<p>23. What is the common name for NaHCO3?</p>
-<label><input type="radio" name="q23" value="A"> A. Baking soda</label>
-<label><input type="radio" name="q23" value="B"> B. Salt</label>
-<label><input type="radio" name="q23" value="C"> C. Sugar</label>
-<label><input type="radio" name="q23" value="D"> D. Vinegar</label>
+<p>22. লবণজল কি ধরনের দ্রবণ?</p>
+<label><input type="radio" name="q22" value="A"> A. আয়নিত</label>
+<label><input type="radio" name="q22" value="B"> B. জলীয়</label>
+<label><input type="radio" name="q22" value="C"> C. গ্যাসীয়</label>
+<label><input type="radio" name="q22" value="D"> D. কঠিন</label>
 
-<p>24. Which element is essential for the formation of hemoglobin?</p>
-<label><input type="radio" name="q24" value="A"> A. Iron</label>
-<label><input type="radio" name="q24" value="B"> B. Calcium</label>
-<label><input type="radio" name="q24" value="C"> C. Magnesium</label>
-<label><input type="radio" name="q24" value="D"> D. Potassium</label>
+<p>23. বায়ুতে সবচেয়ে বেশি কোন গ্যাস থাকে?</p>
+<label><input type="radio" name="q23" value="A"> A. নাইট্রোজেন</label>
+<label><input type="radio" name="q23" value="B"> B. অক্সিজেন</label>
+<label><input type="radio" name="q23" value="C"> C. কার্বন ডাইঅক্সাইড</label>
+<label><input type="radio" name="q23" value="D"> D. আর্গন</label>
 
-<p>25. What is the pH of stomach acid?</p>
-<label><input type="radio" name="q25" value="A"> A. 1-3</label>
-<label><input type="radio" name="q25" value="B"> B. 7</label>
-<label><input type="radio" name="q25" value="C"> C. 5</label>
-<label><input type="radio" name="q25" value="D"> D. 9</label>
+<p>24. বাষ্পীভবন কি?</p>
+<label><input type="radio" name="q24" value="A"> A. তরল থেকে গ্যাসে রূপান্তর</label>
+<label><input type="radio" name="q24" value="B"> B. গ্যাস থেকে কঠিনে রূপান্তর</label>
+<label><input type="radio" name="q24" value="C"> C. কঠিন থেকে তরলে রূপান্তর</label>
+<label><input type="radio" name="q24" value="D"> D. তরল থেকে কঠিনে রূপান্তর</label>
+
+<p>25. পানি সেঁধানো কোন প্রক্রিয়া?</p>
+<label><input type="radio" name="q25" value="A"> A. পরমাণু বিক্রিয়া</label>
+<label><input type="radio" name="q25" value="B"> B. রাসায়নিক বিক্রিয়া</label>
+<label><input type="radio" name="q25" value="C"> C. শারীরিক পরিবর্তন</label>
+<label><input type="radio" name="q25" value="D"> D. আলোক বিক্রিয়া</label>
+
+
+
 
             </div>
             <button id="submit-btn">Submit Exam</button>
