--- a/index.html
+++ b/index.html
@@ -431,13 +431,13 @@ q25: document.querySelector('input[name="q25"]:checked')?.value || "blank"
                     suggestions.push("YOUR CUSTOM SUGGESTIONS ARE : ");
                 }
                 if (wrongOrBlank.some(q => [1,16].includes(parseInt(q)))) {
-                    suggestions.push("রক্ত কপাটিকে এর টপিক টি ভালো করে পরো");
+                    suggestions.push("<br>রক্ত কপাটিকে এর টপিক টি ভালো করে পরো");
                 }
                 if (wrongOrBlank.some(q => [2,3,4,5,7,15,18,19,23].includes(parseInt(q)))) {
-                    suggestions.push("রক্তের কণিকা এর টপিক টিতে তোমার কিছুটা দুর্বলতা রয়েছে");
+                    suggestions.push(<br>"রক্তের কণিকা এর টপিক টিতে তোমার কিছুটা দুর্বলতা রয়েছে"<br>);
                 }
                if (wrongOrBlank.some(q => [14].includes(parseInt(q)))) {
-                    suggestions.push("রক্ত তঞ্চন টপিক টি দেখে নাও");
+                    suggestions.push("রক্ত তঞ্চন টপিক টি দেখে নাও"); <br>
                 }
                if (wrongOrBlank.some(q => [8,9,11,12,21,22,24].includes(parseInt(q)))) {
                     suggestions.push("হৃৎপিন্ড টপিক এর প্রতিটা লাইন মন দিয়ে পর");
