--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ q25: document.querySelector('input[name="q25"]:checked')?.value || "blank"
                     suggestions.push(<br>"রক্তের কণিকা এর টপিক টিতে তোমার কিছুটা দুর্বলতা রয়েছে"<br>);
                 }
                if (wrongOrBlank.some(q => [14].includes(parseInt(q)))) {
-                    suggestions.push("রক্ত তঞ্চন টপিক টি দেখে নাও"); <br>
+                    suggestions.push("রক্ত তঞ্চন টপিক টি দেখে নাও");
                 }
                if (wrongOrBlank.some(q => [8,9,11,12,21,22,24].includes(parseInt(q)))) {
                     suggestions.push("হৃৎপিন্ড টপিক এর প্রতিটা লাইন মন দিয়ে পর");
